# grosbeak

./: .gitignore  .replit  LICENSE  README.md  main.py  pyproject.toml
src/: config.py  main.py  orchestrator.py
src/agents/: aggregator_agent.py  existing_resume_agent.py  linkedin_agent.py  resume_agent.py
src/api/: routes.py
src/models/: context.py  job.py  linkedin.py  resume.py
src/services/: context_manager.py  context_store.py  github_scraper.py  llm_manager.py  web_scraper.py  web_searcher.py
src/utils/: flexible_date_parser.py  json_encoder.py
templates/: base.html  error.html  index.html  resume_result.html
