[tool.poetry]
name = "grosbeak"
version = "0.1.0"
description = ""
authors = ["Joshua Oliphant <joshua.oliphant@hey.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
chromadb = "^0.5.3"
openai = "^1.35.3"
logfire = {extras = ["fastapi"], version = "^0.45.1"}
pydantic = "^2.7.4"
aiofiles = "^23.2.1"
aiohttp = "^3.9.5"
instructor = "^1.3.3"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
jinja2 = "^3.1.4"
python-multipart = "^0.0.9"
pydantic-settings = "^2.3.4"
markdown = "^3.6"
opentelemetry-instrumentation-aiohttp-client = "^0.46b0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.logfire]
pydantic_plugin_record = "all"
